# kf_lab

./: .gitignore  pyproject.toml
examples/: 00_smoketest.py  01_minimal_cv_kf.py  02_compare_kf_vs_ekf_rangebearing.py
notebooks/: 01_sanity.ipynb  02_manual_sanity.ipynb  03_imm_example.ipynb  06_scenarios_with_measurements.ipynb  07_adaptive_tuner.ipynb
src/kf_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kf_lab/core/: interfaces.py  state.py  utils.py
src/kf_lab/experiments/: run_once.py
src/kf_lab/filters/: ekf.py  imm.py  kf.py
src/kf_lab/metrics/: consistency.py  error.py
src/kf_lab/models/measurement/: pos2d.py  range_bearing.py
src/kf_lab/models/motion/: ca.py  ct.py  cv.py
src/kf_lab/sensors/: sampler.py
src/kf_lab/sims/: scenarios.py
src/kf_lab/tuners/: covariance_matching_r.py
src/kf_lab/viz/: plots.py
