[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kf_lab"
version = "0.1.0"
description = "A small lab for trajectories and Kalman filtering experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pyyaml>=6.0.1",
  "black>=24.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py311"]


